--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 body {
   background-color: #ffffff;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* Barra de navegación */
 .bg-purple {
   background: #660066;
+  position: initial;
 }
 
 .logo {
@@ -15,10 +18,20 @@ body {
   margin: 0;
 }
 
-.contenedor_foto {
-  width: 60%;
-  height: 60%;
-  background-image: url("assets/img/blob.jpg");
+.grid-block {
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+
+.img-me {
+  width: 100%;
+}
+
+.container1-img {
+  position: relative;
 }
 
 .yo-soy {
@@ -29,7 +42,7 @@ body {
   font-family: "Oswald", cursive;
   font-weight: 200;
   font-size: 72pt;
-  color: #ffffff;
+  color: #000000;
   border-bottom: 1px solid #ffffff;
 }
 
@@ -37,9 +50,7 @@ body {
   font-family: "Oswald", cursive;
   font-weight: bold;
   font-size: 40pt;
-  color: #ffffff;
-
-
+  color: #000000;
 }
 
 .texto3 {
@@ -49,6 +60,7 @@ body {
   color: #ffffff;
   margin: 0;
 }
+
 .texto4 {
   font-family: "Oswald", cursive;
   font-weight: bold;
@@ -66,6 +78,7 @@ body {
   width: 115pt;
   text-align: center;
 }
+
 .span,
 .borde-b {
   margin: auto;
@@ -75,17 +88,92 @@ body {
   width: 115pt;
   text-align: center;
 }
+
 .box {
-  border: 3px solid greenyellow;
+  border: 3px solid #707070;
 }
 
 .boton {
   text-align: center;
 }
-.btn-lg{
+
+.btn-lg {
   padding: .5rem 5rem;
 }
 
 footer i {
   margin: 00.25em 0.5em 0.25em;
 }
+
+.card-title {
+  text-align: left;
+}
+  /* seccion #3 sobre mí */
+.parra {
+  width: 100%;
+  margin: 50px;
+  padding: 25px;
+}
+
+.parra1 {
+  display: inline-block;
+  text-align: justify;
+  width: 44%;
+  margin: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
+  color: #000000;
+}
+
+.txt {
+  font-family: "Oswald", cursive;
+  font-weight: bold;
+  font-size: 32pt;
+  margin: 20px 0;
+  color: #000000;
+}
+
+/* Seccion #2 yo soy */
+.texto {
+  width: 100%;
+  position: absolute;
+  top: 65%;
+  text-align: center;
+  font-size: calc(2em + 1vw);
+  color: #ffffff;
+  font-family: "Oswald", cursive;
+  font-weight: 300;
+}
+
+.nombre {
+  width: 100%;
+  position: absolute;
+  top: 80%;
+  text-align: center;
+  font-size: calc(2em + 1vw);
+  color: #ffffff;
+  font-family: "Oswald", cursive;
+  font-weight: bold;
+}
+
+.img1 {
+  height: 100%;
+  padding-bottom: 76%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+/* seccion # 3 Mi experiencia */
+
+.parra2 {
+  display: inline-block;
+  text-align: justify;
+  width: 100%;
+  margin: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
+  color: #000000;
+  }
