--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,27 +17,7 @@ body {
   padding: 0;
   margin: 0;
 }
-
-.grid-block {
-  width: 100%;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
-
-.img-me {
-  width: 100%;
-}
-
-.container1-img {
-  position: relative;
-}
-
-.yo-soy {
-  text-align: center;
-}
-
+/* parrafos */
 .texto1 {
   font-family: "Oswald", cursive;
   font-weight: 200;
@@ -93,43 +73,9 @@ body {
   border: 3px solid #707070;
 }
 
-.boton {
-  text-align: center;
-}
-
-.btn-lg {
-  padding: .5rem 5rem;
-}
-
-footer i {
-  margin: 00.25em 0.5em 0.25em;
-}
 
 .card-title {
   text-align: left;
-}
-  /* seccion #3 sobre mí */
-.parra {
-  width: 100%;
-  margin: 50px;
-  padding: 25px;
-}
-
-.parra1 {
-  display: inline-block;
-  text-align: justify;
-  width: 44%;
-  margin: 30px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
-  color: #000000;
-}
-
-.txt {
-  font-family: "Oswald", cursive;
-  font-weight: bold;
-  font-size: 32pt;
-  margin: 20px 0;
-  color: #000000;
 }
 
 /* Seccion #2 yo soy */
@@ -167,8 +113,21 @@ footer i {
   width: 100%;
 }
 
-/* seccion # 3 Mi experiencia */
+  /* seccion #3 sobre mí */
+.parra {
+  width: 100%;
+  margin: 50px;
+  padding: 25px;
+}
 
+.parra1 {
+  display: inline-block;
+  text-align: justify;
+  width: 44%;
+  margin: 30px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
+  color: #000000;
+}
 .parra2 {
   display: inline-block;
   text-align: justify;
@@ -177,3 +136,17 @@ footer i {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
   color: #000000;
   }
+
+.txt {
+  font-family: "Oswald", cursive;
+  font-weight: bold;
+  font-size: 32pt;
+  margin: 20px 0;
+  color: #000000;
+}
+
+footer {
+  height: 215px;
+}
+
+
